--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -6,8 +6,10 @@ jobs:
     steps:
       - name: actions version
         uses: actions/checkout@v3
-      - name: run npm lint
-        run: npm lint
+      - name: run npm ci
+        run: npm ci
+      - name: run npm run lint
+        run: npm run lint
 
   test:
     needs: lint
@@ -16,7 +18,7 @@ jobs:
       - name: actions version
         uses: actions/checkout@v3
       - name: run npm lint
-        run: npm test
+        run: npm run test
   build:
     needs: test
     runs-on: ubuntu-latest
@@ -24,7 +26,7 @@ jobs:
       - name: actions version
         uses: actions/checkout@v3
       - name: run npm lint
-        run: npm build
+        run: npm run build
 
 
     
